<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".TvShowDetails">

<LinearLayout
    android:layout_width="match_parent"

    android:layout_height="match_parent"


    android:orientation="vertical"
    android:padding="8dp"
  >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="185dp"
            android:layout_height="278dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/TODO2"
            android:id="@+id/poster"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/titlee"/>
            <ImageView
                android:paddingTop="60dp"
                android:paddingStart="60dp"
                android:paddingEnd="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fav"
                android:contentDescription="@string/desc"
                android:id="@+id/fav2"
                android:onClick="clickeventd"
                />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vote"
        android:id="@+id/vote"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release"
        android:id="@+id/date"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/over"
        android:id="@+id/overview"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rev"
            android:id="@+id/reviewlist"
            />
        </LinearLayout>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/Review_recycle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
</ScrollView>


